test(endpoint): update index html modify test